--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
       <!-- /Hero Section -->
 
       <!-- About Us Section 02 -->
-      <section class="about animate__animated animate__backInDown animate__delay-1s">
+      <section class="about >
         <div class="container ">
           <!-- Title Section -->
           <div class="row align-items-center aos-init" data-aos="fade-down">
